--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
 certifi==2018.1.18
 chardet==3.0.4
+future==0.16.0
 idna==2.6
+PIL==1.1.7
+python-telegram-bot==9.0.0
 requests==2.18.4
+telegram==0.0.1
+telepot==12.5
 urllib3==1.22
+virtualenv==15.1.0
